--- a/ceramic.html
+++ b/ceramic.html
@@ -10,10 +10,11 @@
 	</head>
 
 	<body>
+	<div id="wrapper">	
 		
 		<header class="headersection">
 		<h1 id="logo">
-			<img src="images/maxine-01.png" width="250" alt="me" />
+			<a href="index.html"><img src="images/maxine-01.png" width="250" alt="me" /></a>
 		</h1>
 		
 		<nav id="menu">
@@ -22,7 +23,6 @@
 				<li><a href="iat.html">Interactive Arts + Technology</a></li>							
 				<li><a href="video.html">Video</a></li>
 				<li><a id="current" href="ceramic.html">Ceramic Arts</a></li>			
-				<li><a href="printmaking.html">Printmaking</a></li>
 				<li><a href="photography.html">Photography</a></li>
 			</ul>
 			</nav>		
@@ -36,20 +36,21 @@
 		</header>
 		
 		<section id="ceramicthumb">
-		<img src ="img-thumbnails/thumb_TC.jpg" alt="ceramic1" width="900px"/>
-		<img src ="img-thumbnails/thumb_A.jpg" alt="ceramic1" width="900px" />
-		<img src ="img-thumbnails/thumb_B.jpg" alt="ceramic1" width="900px"/>
-		<img src ="img-thumbnails/thumb_cave2.jpg" alt="ceramic1" width="900px"/>
-		<img src ="img-thumbnails/thumb_CT.jpg" alt="ceramic1" width="900px"/>
-		<img src ="img-thumbnails/thumb_FHS.jpg" alt="ceramic1" width="900px"/>
-		<img src ="img-thumbnails/Thumb_FOM.jpg" alt="ceramic1" width="900px"/>
-		<img src ="img-thumbnails/thumb_JanJun.jpg" alt="ceramic1" width="900px"/>
-		<img src ="img-thumbnails/thumb_LL.jpg" alt="ceramic1" width="900px"/>
+		<img src ="img-thumbnails/thumb_TC.jpg" alt="ceramic1" />
+		<img src ="img-thumbnails/thumb_A.jpg" alt="ceramic1" />
+		<img src ="img-thumbnails/thumb_B.jpg" alt="ceramic1" />
+		<img src ="img-thumbnails/thumb_cave2.jpg" alt="ceramic1" />
+		<img src ="img-thumbnails/thumb_CT.jpg" alt="ceramic1" />
+		<img src ="img-thumbnails/thumb_FHS.jpg" alt="ceramic1" />
+		<img src ="img-thumbnails/Thumb_FOM.jpg" alt="ceramic1" />
+		<img src ="img-thumbnails/thumb_JanJun.jpg" alt="ceramic1" />
+		<img src ="img-thumbnails/thumb_LL.jpg" alt="ceramic1" />
 		
 				
 		</section>
 		
 		<footer> Copyright Maxine JY Kim 2012 </footer>
+	</div>
 	</body>
 
 </html>	
