--- a/index.html
+++ b/index.html
@@ -1,66 +1,83 @@
 <!DOCTYPE html>
-<html>
+<html>	
 	<head>
 		<title> Maxine Jungyeon Kim's portfolio </title>
 		<link href="style.css" rel="stylesheet" />
 		<link href='http://fonts.googleapis.com/css?family=Cantarell|Quattrocento+Sans' rel='stylesheet' type='text/css'>
+		<!-- INCLUDE THE JQUERY LIBRARY FROM THE GOOGLE CODE API -->
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.2/jquery.min.js"></script>
+		<script src="menu.js"></script>
 		
-
+		
 	</head>
 
 	<body>
-		
+	
+	<div id="wrapper">	
 		<header class="headersection">
-		<h1 id="logo">
-			<a href="index.html"><img src="images/maxine-01.png" width="250" alt="me" /></a>
-		</h1>
+			<h1 id="logo">
+				<a href="index.html"><img src="images/maxine-01.png" width="250" alt="me" /></a>
+				</h1>
 		
-		<nav id="menu">
-			<ul>
-				<li><a id="current" href="index.html">About Me</a></li>
-				<li><a href="iat.html">Interactive Arts + Technology</a></li>							
-				<li><a href="video.html">Video</a></li>				
-				<li><a href="ceramic.html">Ceramic Arts</a></li>					
-				<li><a href="printmaking.html">Printmaking</a></li>			
-				<li><a href="photography.html">Photography</a></li>
-			</ul>
+			<nav id="menu">
+				<ul>
+					<li><a id="current" href="index.html">About Me</a></li>
+					<li><a href="iat.html">Interactive Arts + Technology</a></li>							
+					<li><a href="video.html">Video</a></li>				
+					<li><a href="ceramic.html">Ceramic Arts</a></li>					
+					<li><a href="photography.html">Photography</a></li>
+				</ul>
 			</nav>
 
+				
+		</header>
+		
 		<article class="canvas">
-			<canvas id="rect0"></canvas>	  
-			<canvas id="rect1"></canvas>
-			<canvas id="rect2"></canvas>
+				<canvas id="rect0"></canvas>	  
+				<canvas id="rect1"></canvas>
+				<canvas id="rect2"></canvas>
 		</article>	
 			
-		</header>
-			
-		<section class="aboutmePic">
-		<img id="main" src="images/profile_thmn.jpg" alt="Maxine" />
+		<section>
+			<img id="main" src="images/profile_thmn.jpg" alt="Maxine" />
 		</section>
 		
-		
-		<p id="indextext1">
-		<strong>Imagination, interaction, adventure, and embodiment</strong>
-		<span style="font-size:14px"> inspire me to create. </span><br><br>
-		</p>
-		
-		<p id="indextext2">
-		I am a MFA Design and Technology student at Parsons in New York City.<br><br>
-		I am passionate about working with new medium and technologies to enhance my own style and design aesthetic. </p>
-		
-		<p id="indextext3">
-		I create to communicate with individuals on different levels so that they can experience a deeper connection with my work, and from these interactions I gain inspiration and
-motivation to imagine my next creation.<br><br>
+		<section class="mainContent">
+			<article id="indexcontent1">
+				<h2>test1</h2>
+				<p id="content1">
+					<strong>Imagination, interaction, adventure, and embodiment</strong>
+					inspire me to create.
+				</p>
+			</article>
+			
+			<article id="indexcontent2">
+				<h2>text2</h2>
+				<p id="content2">
+					I am a MFA Design and Technology student at Parsons in New York City.<br><br>
+					I am passionate about working with new medium and technologies to enhance my own style and design aesthetic. 
+					</p>
+			</article>
+			
+			<article id="indexcontent3">	
+				<h2>text3</h2>
+				<p id="content3">
+					I create to communicate with individuals on different levels so that they can experience a deeper 								connection with my work, and from these interactions I gain inspiration and
+					motivation to imagine my next creation.<br><br>
 
-My motivation to work is seeing people enjoy my work. 
-I am constantly learning and develop myself to be able to share my accomplishment with people through my work. I <span style ="color: red">love </span>what I do.
-		</p>
-				 
-		
-		<br><br>
-		
-		<footer> Copyright Maxine JY Kim 2012 </footer>
-	</body>
+					My motivation to work is seeing people enjoy my work. 
+					I am constantly learning and develop myself to be able to share my accomplishment with people through my 
+					work. I <span style ="color: red">love </span>what I do.
+					</p>
+			</article>
+			
+		</section>		 
 	
+		<footer> Copyright Maxine JY Kim 2012 </footer>
+	
+	</div>
+		
+	</body>
 
 </html>
+
