--- a/printmaking.html
+++ b/printmaking.html
@@ -11,10 +11,11 @@
 	</head>
 
 	<body>
+	<div id="wrapper">
 		
 		<header class="headersection">
 		<h1 id="logo">
-			<img src="images/maxine-01.png" width="250" alt="me" />
+			<a href="index.html"><img src="images/maxine-01.png" width="250" alt="me" /></a>
 		</h1>
 		
 		<nav id="menu">
@@ -23,7 +24,6 @@
 				<li><a href="iat.html">Interactive Arts + Technology</a></li>							
 				<li><a href="video.html">Video</a></li>
 				<li><a href="ceramic.html">Ceramic Arts</a></li>			
-				<li><a id="current" href="printmaking.html">Printmaking</a></li>
 				<li><a href="photography.html">Photography</a></li>
 			</ul>
 			</nav>
@@ -43,6 +43,8 @@
 		
 		</section>
 		<footer> Copyright Maxine JY Kim 2012 </footer>
+		
+	</div>
 	</body>
 
 </html>	
