--- a/video.html
+++ b/video.html
@@ -11,10 +11,11 @@
 	</head>
 
 	<body>
+	<div id="wrapper">
 		
-		<header class="headersection">
+	<header class="headersection">
 		<h1 id="logo">
-			<img src="images/maxine-01.png" width="250" alt="me" />
+			<a href="index.html"><img src="images/maxine-01.png" width="250" alt="me" /></a>
 		</h1>
 		
 		<nav id="menu">
@@ -23,10 +24,9 @@
 				<li><a href="iat.html">Interactive Arts + Technology</a></li>							
 				<li><a id="current" href="video.html">Video</a></li>
 				<li><a href="ceramic.html">Ceramic Arts</a></li>			
-				<li><a href="printmaking.html">Printmaking</a></li>
 				<li><a href="photography.html">Photography</a></li>
 			</ul>
-			</nav>
+		</nav>
 		
 
 		<article class="canvas">
@@ -35,45 +35,33 @@
 			<canvas id="rect2"></canvas>
 		</article>	
 		
-		</header>
+	</header>
 
 		
-		<section id="videos">
-	
-
-
-<h2><span style="color: #f77825;"><strong>Documentation Video</strong></span></h2>
-<span style="color: #000000;"><span style="color: #808080;"> My Role:</span> Director + Camera shooting, Editing, Sound design</span><span style="color: #808080;">
-Program used:</span> <span style="color: #000000;">Final Cut Pro
-<em><span style="color: #888888;">Duration: 4min 57sec</span></em>
-</span>
-
-&nbsp;
-<p></p><strong>Title: Seo Kwang Sa (Korean Temple) -</strong> 2008
-<iframe src="http://player.vimeo.com/video/34100982?title=0&amp;byline=0&amp;portrait=0" frameborder="0" width="640" height="360"></iframe></p>
-&nbsp;
-
-<hr />
-
-<h2><span style="color: #f77825;">Narrative</span></h2>
-<span style="color: #808080;">My Role:</span> <span style="color: #000000;">Director + Camera Shooting, Casting, Editing, Sound Design</span>
-<span style="color: #808080;">Program used:</span><span style="color: #000000;"> Final Cut Pro / Photoshop</span><em>
-Duration: 8min 25sec</em>
-
-&nbsp;
-<h3>Title: The Quizzza - 2008</h3>
-<iframe src="http://www.youtube.com/embed/Uaf2lyxkNhM" frameborder="0" width="640" height="360"></iframe>
-
-&nbsp;
-
-<hr />
-<h2><span style="color: #f77825;"><strong>Tessella</strong></span></h2>
-
-<iframe src="http://player.vimeo.com/video/31578603" width="600" height ="400" frameborder="0"></iframe> 
-		</section>
-
+	<section id="videos">
+		<h2>Documentation Video</h2>
+		<p>My Role: Director + Camera shooting, Editing, Sound design<br>
+		Program used: Final Cut Pro<br>
+		Duration: 4min 57sec<br>
+		<strong>Title: Seo Kwang Sa (Korean Temple) -</strong> 2008
+		<iframe src="http://player.vimeo.com/video/34100982?title=0&amp;byline=0&amp;portrait=0" frameborder="0" width="640" height="360"></iframe>
+		</p>
+		
+		
+		<h2>Narrative</h2>
+		<p>My Role:Director + Camera Shooting, Casting, Editing, Sound Design<br>
+		Program used: Final Cut Pro / Photoshop<br>
+		Duration: 8min 25sec<br>
+		<strong>Title: The Quizzza - 2008</strong>
+		<iframe src="http://www.youtube.com/embed/Uaf2lyxkNhM" frameborder="0" width="640" height="360"></iframe>
+		</p>
 		
 		<footer> Copyright Maxine JY Kim 2012 </footer>
+		
+		
+	</section>
+	</div>
+	
 	</body>
 
 </html>	
