--- a/photography.html
+++ b/photography.html
@@ -9,18 +9,20 @@
 		<link href="jquery.css" />
 		
 		<script src="jquery-1.7.2.js"></script>
-		<script src="examples.js"></script>
+		<script src="menu.js"></script>
 		
 		<!-- Add Google Font -->
 		<link href='http://fonts.googleapis.com/css?family=Cantarell|Quattrocento+Sans' rel='stylesheet' type='text/css'>
 		
 		<link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-thumbs.css?v=2.0.6" type="text/css" media="screen" />
 		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=2.0.6"></script>
-
-
-		<!-- Add jQuery library -->
+		
+		
+	
+<!-- Add jQuery library -->
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7/jquery.min.js"></script>
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.6/jquery.min.js"></script>
 		
 		<!-- Add mousewheel plugin (this is optional) -->
 		<script type="text/javascript" src="fancybox/lib/jquery.mousewheel-3.0.6.pack.js"></script>
@@ -36,8 +38,9 @@
 		
 		<!-- Add thumbnail helper -->
 		<link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-thumbs.css?v=2.0.6" type="text/css" media="screen" />
-<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=2.0.6"></script>
+		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=2.0.6"></script>
 		
+
 		
 		<!-- Javascript for fancybox -->
 		<script>
@@ -61,20 +64,23 @@
 			thumbs	: {
 				width	: 50,
 				height	: 50
+				}
 			}
-		}
-	});
-});
+			});
+			
+
+		});
 
 		</script>
 		
 		
 	</head>
 	<body>
+	<div id="wrapper">
 		
 		<header class="headersection">
 		<h1 id="logo">
-			<img src="images/maxine-01.png" width="250" alt="me" />
+			<a href="index.html"><img src="images/maxine-01.png" width="250" alt="me" /></a>
 		</h1>
 		
 		<nav id="menu">
@@ -83,7 +89,6 @@
 				<li><a href="iat.html">Interactive Arts + Technology</a></li>							
 				<li><a href="video.html">Video</a></li>
 				<li><a href="ceramic.html">Ceramic Arts</a></li>			
-				<li><a href="printmaking.html">Printmaking</a></li>
 				<li><a id="current" href="photography.html">Photography</a></li>
 			</ul>
 			</nav>
@@ -101,33 +106,34 @@
 		
 		<section id="photographyimg">
 		
-		<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/baseballgame2.jpg"><img src="img-photography/baseballgame2.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/carving.jpg"><img src="img-photography/carving.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/hongdae01.jpg"><img src="img-photography/hongdae01.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea1.jpg"><img src="img-photography/Korea1.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea2.jpg"><img src="img-photography/Korea2.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea3.jpg"><img src="img-photography/Korea3.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea4.jpg"><img src="img-photography/Korea4.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea5.jpg"><img src="img-photography/Korea5.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea6.jpg"><img src="img-photography/Korea6.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea7.jpg"><img src="img-photography/Korea7.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea8.jpg"><img src="img-photography/Korea8.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea9.jpg"><img src="img-photography/Korea9.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea10.jpg"><img src="img-photography/Korea10.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea11.jpg"><img src="img-photography/Korea11.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/NYTAXI.jpg"><img src="img-photography/NYTAXI.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/bada.jpg"><img src="img-photography/bada.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Kong_Lime.jpg"><img src="img-photography/Kong_Lime.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Kong_Lime3.jpg"><img src="img-photography/Kong_Lime3.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Kong_Lime4.jpg"><img src="img-photography/Kong_Lime4.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Kong_Lime2.jpg"><img src="img-photography/Kong_Lime2.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Kong01.jpg"><img src="img-photography/Kong01.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/sky.jpg"><img src="img-photography/sky.jpg" alt="" width="200px" /></a>
-			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/dudu.jpg"><img src="img-photography/dudu.jpg" alt="" width="200px" /></a>
+		<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/baseballgame2.jpg"><img src="img-photography/baseballgame2.jpg" alt="" /></a>
+		
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/carving.jpg"><img src="img-photography/carving.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/hongdae01.jpg"><img src="img-photography/hongdae01.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea1.jpg"><img src="img-photography/Korea1.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea2.jpg"><img src="img-photography/Korea2.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea3.jpg"><img src="img-photography/Korea3.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea4.jpg"><img src="img-photography/Korea4.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea5.jpg"><img src="img-photography/Korea5.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea6.jpg"><img src="img-photography/Korea6.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea7.jpg"><img src="img-photography/Korea7.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea8.jpg"><img src="img-photography/Korea8.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea9.jpg"><img src="img-photography/Korea9.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea10.jpg"><img src="img-photography/Korea10.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Korea11.jpg"><img src="img-photography/Korea11.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/NYTAXI.jpg"><img src="img-photography/NYTAXI.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/bada.jpg"><img src="img-photography/bada.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Kong_Lime.jpg"><img src="img-photography/Kong_Lime.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Kong_Lime3.jpg"><img src="img-photography/Kong_Lime3.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Kong_Lime4.jpg"><img src="img-photography/Kong_Lime4.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Kong_Lime2.jpg"><img src="img-photography/Kong_Lime2.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/Kong01.jpg"><img src="img-photography/Kong01.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/sky.jpg"><img src="img-photography/sky.jpg" alt="" /></a>
+			<a class="fancybox-thumb" rel="fancybox-thumb" href="img-photography/dudu.jpg"><img src="img-photography/dudu.jpg" alt="" /></a>
 
 		</section>
 
-	
+	</div>
 	
 	</body>
 
